--- a/warung.html
+++ b/warung.html
@@ -25,7 +25,7 @@
             </a>
 
             <!-- Warung 2 -->
-            <a href="warung-nio.html" class="warung-card">
+            <a href="nio.html" class="warung-card">
                 <div class="bg-white p-6 rounded-lg shadow-lg flex flex-col items-center transition transform hover:scale-105">
                     <div class="bg-blue-500 p-3 rounded-full text-white">
                         <svg class="w-10 h-10" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -37,7 +37,7 @@
             </a>
 
             <!-- Warung 3 -->
-            <a href="warung-amoy.html" class="warung-card">
+            <a href="amoy.html" class="warung-card">
                 <div class="bg-white p-6 rounded-lg shadow-lg flex flex-col items-center transition transform hover:scale-105">
                     <div class="bg-green-500 p-3 rounded-full text-white">
                         <svg class="w-10 h-10" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
