--- a/angkringan-bebeb.html
+++ b/angkringan-bebeb.html
@@ -88,7 +88,8 @@
         { name: "Dumpling Bakar", price: 10000 },
         { name: "Fishroll Bakar", price: 10000 },
         { name: "Otak-otak Goreng", price: 6000 },
-        { name: "Takoyaki", price: 10000 },
+        { name: "Takoyaki Mini", price: 50000 },
+        { name: "Takoyaki Wareg", price: 10000 },
         { name: "Burger", price: 10000 },
         { name: "Usus Basah+Kering", price: 5000 },
         { name: "Salad Buah", price: 10000 }
